[package]
name = "todo-trait"
version = "0.1.0"
authors = [
    "csh <csh@smrkn.com>"
]
description = "A macro for generating todo impls"
keywords = ["proc_macro", "procmacro", "todo"]
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2",features = ["full", "derive"] }

